--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bf822ee7",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,252 @@
     "# from sklearn.externals.six import StringIO \n",
     "from six import StringIO\n",
     "from IPython.display import Image  \n",
-    "import pydotplus"
+    "import pydotplus\n",
+    "\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8cedb8cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File downloaded\n",
+      "Cache created\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_cache = 'data/elo7_search_dataset.csv'\n",
+    "if os.path.exists(file_cache):\n",
+    "    df = pd.read_csv(file_cache)\n",
+    "    print(\"Using cache\")\n",
+    "else:\n",
+    "    df = pd.read_csv('s3://elo7-datasets/elo7-search-dataset/elo7_search_dataset.csv')\n",
+    "    print(\"File downloaded\")\n",
+    "    df.to_csv(file_cache)\n",
+    "    print(\"Cache created\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "de9cb5ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>seller_id</th>\n",
+       "      <th>query</th>\n",
+       "      <th>search_page</th>\n",
+       "      <th>position</th>\n",
+       "      <th>classification</th>\n",
+       "      <th>title</th>\n",
+       "      <th>category</th>\n",
+       "      <th>subcategory</th>\n",
+       "      <th>tags</th>\n",
+       "      <th>collection_names</th>\n",
+       "      <th>creation_date</th>\n",
+       "      <th>price</th>\n",
+       "      <th>minimum_quantity</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>express_delivery</th>\n",
+       "      <th>order_counts</th>\n",
+       "      <th>view_counts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14229551</td>\n",
+       "      <td>5243703</td>\n",
+       "      <td>embalagem papel kraft</td>\n",
+       "      <td>3</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Sacola kraft media c/ papel rendado</td>\n",
+       "      <td>Papel e Cia</td>\n",
+       "      <td>Embalagem</td>\n",
+       "      <td>sacolas de papel,embalagens para presente,bols...</td>\n",
+       "      <td>sacolas papel coloridas niver anna's</td>\n",
+       "      <td>2008-11-05 22:57:17</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>131.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14229551</td>\n",
+       "      <td>5243703</td>\n",
+       "      <td>papel rendado</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Sacola kraft media c/ papel rendado</td>\n",
+       "      <td>Papel e Cia</td>\n",
+       "      <td>Embalagem</td>\n",
+       "      <td>sacolas de papel,embalagens para presente,bols...</td>\n",
+       "      <td>sacolas papel coloridas niver anna's</td>\n",
+       "      <td>2008-11-05 22:57:17</td>\n",
+       "      <td>12.04</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>133.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14229551</td>\n",
+       "      <td>5243703</td>\n",
+       "      <td>sacola de papel kraft</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Sacola kraft media c/ papel rendado</td>\n",
+       "      <td>Papel e Cia</td>\n",
+       "      <td>Embalagem</td>\n",
+       "      <td>sacolas de papel,embalagens para presente,bols...</td>\n",
+       "      <td>sacolas papel coloridas niver anna's</td>\n",
+       "      <td>2008-11-05 22:57:17</td>\n",
+       "      <td>12.26</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>129.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4564841</td>\n",
+       "      <td>9070334</td>\n",
+       "      <td>tag para bijuteria</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Papelaria impressa para bijuteria 009</td>\n",
+       "      <td>Papel e Cia</td>\n",
+       "      <td>Tag</td>\n",
+       "      <td>tags,tag,bijuterias,brinco,pulseira,colar,etiq...</td>\n",
+       "      <td>kit bijuterias</td>\n",
+       "      <td>2009-10-27 03:35:16</td>\n",
+       "      <td>89.40</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>111.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4564841</td>\n",
+       "      <td>9070334</td>\n",
+       "      <td>bijuterias</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Papelaria impressa para bijuteria 009</td>\n",
+       "      <td>Papel e Cia</td>\n",
+       "      <td>Tag</td>\n",
+       "      <td>tags,tag,bijuterias,brinco,pulseira,colar,etiq...</td>\n",
+       "      <td>kit bijuterias</td>\n",
+       "      <td>2009-10-27 03:35:16</td>\n",
+       "      <td>89.66</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>127.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   product_id  seller_id                  query  search_page  position  \\\n",
+       "0    14229551    5243703  embalagem papel kraft            3        33   \n",
+       "1    14229551    5243703          papel rendado            2        14   \n",
+       "2    14229551    5243703  sacola de papel kraft            1        21   \n",
+       "3     4564841    9070334     tag para bijuteria            1        20   \n",
+       "4     4564841    9070334             bijuterias            1        31   \n",
+       "\n",
+       "   classification                                  title     category  \\\n",
+       "0               0    Sacola kraft media c/ papel rendado  Papel e Cia   \n",
+       "1               0    Sacola kraft media c/ papel rendado  Papel e Cia   \n",
+       "2               1    Sacola kraft media c/ papel rendado  Papel e Cia   \n",
+       "3               0  Papelaria impressa para bijuteria 009  Papel e Cia   \n",
+       "4               0  Papelaria impressa para bijuteria 009  Papel e Cia   \n",
+       "\n",
+       "  subcategory                                               tags  \\\n",
+       "0   Embalagem  sacolas de papel,embalagens para presente,bols...   \n",
+       "1   Embalagem  sacolas de papel,embalagens para presente,bols...   \n",
+       "2   Embalagem  sacolas de papel,embalagens para presente,bols...   \n",
+       "3         Tag  tags,tag,bijuterias,brinco,pulseira,colar,etiq...   \n",
+       "4         Tag  tags,tag,bijuterias,brinco,pulseira,colar,etiq...   \n",
+       "\n",
+       "                       collection_names        creation_date  price  \\\n",
+       "0  sacolas papel coloridas niver anna's  2008-11-05 22:57:17   3.39   \n",
+       "1  sacolas papel coloridas niver anna's  2008-11-05 22:57:17  12.04   \n",
+       "2  sacolas papel coloridas niver anna's  2008-11-05 22:57:17  12.26   \n",
+       "3                        kit bijuterias  2009-10-27 03:35:16  89.40   \n",
+       "4                        kit bijuterias  2009-10-27 03:35:16  89.66   \n",
+       "\n",
+       "   minimum_quantity  weight  volume  express_delivery  order_counts  \\\n",
+       "0                 4     6.0     NaN                 0           8.0   \n",
+       "1                 0     6.0     NaN                 0           9.0   \n",
+       "2                 4     6.0     NaN                 0           7.0   \n",
+       "3                 4     6.0     NaN                 1           NaN   \n",
+       "4                 1     8.0     NaN                 1           NaN   \n",
+       "\n",
+       "   view_counts  \n",
+       "0        131.0  \n",
+       "1        133.0  \n",
+       "2        129.0  \n",
+       "3        111.0  \n",
+       "4        127.0  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   }
  ],
