--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -27,16 +27,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8cedb8cb",
+   "execution_count": 8,
+   "id": "74472035",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File downloaded\n",
-      "Cache created\n"
+      "Using cache\n"
      ]
     }
    ],
@@ -54,8 +53,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "de9cb5ba",
+   "execution_count": 9,
+   "id": "59c05c19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['price'] = np.round(df['price'],2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2c31a8e2",
    "metadata": {},
    "outputs": [
     {
@@ -79,6 +88,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>product_id</th>\n",
        "      <th>seller_id</th>\n",
        "      <th>query</th>\n",
@@ -103,6 +113,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>14229551</td>\n",
        "      <td>5243703</td>\n",
        "      <td>embalagem papel kraft</td>\n",
@@ -125,6 +136,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>14229551</td>\n",
        "      <td>5243703</td>\n",
        "      <td>papel rendado</td>\n",
@@ -147,6 +159,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>14229551</td>\n",
        "      <td>5243703</td>\n",
        "      <td>sacola de papel kraft</td>\n",
@@ -169,6 +182,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>4564841</td>\n",
        "      <td>9070334</td>\n",
        "      <td>tag para bijuteria</td>\n",
@@ -191,6 +205,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>4564841</td>\n",
        "      <td>9070334</td>\n",
        "      <td>bijuterias</td>\n",
@@ -216,26 +231,26 @@
        "</div>"
       ],
       "text/plain": [
-       "   product_id  seller_id                  query  search_page  position  \\\n",
-       "0    14229551    5243703  embalagem papel kraft            3        33   \n",
-       "1    14229551    5243703          papel rendado            2        14   \n",
-       "2    14229551    5243703  sacola de papel kraft            1        21   \n",
-       "3     4564841    9070334     tag para bijuteria            1        20   \n",
-       "4     4564841    9070334             bijuterias            1        31   \n",
+       "   Unnamed: 0  product_id  seller_id                  query  search_page  \\\n",
+       "0           0    14229551    5243703  embalagem papel kraft            3   \n",
+       "1           1    14229551    5243703          papel rendado            2   \n",
+       "2           2    14229551    5243703  sacola de papel kraft            1   \n",
+       "3           3     4564841    9070334     tag para bijuteria            1   \n",
+       "4           4     4564841    9070334             bijuterias            1   \n",
        "\n",
-       "   classification                                  title     category  \\\n",
-       "0               0    Sacola kraft media c/ papel rendado  Papel e Cia   \n",
-       "1               0    Sacola kraft media c/ papel rendado  Papel e Cia   \n",
-       "2               1    Sacola kraft media c/ papel rendado  Papel e Cia   \n",
-       "3               0  Papelaria impressa para bijuteria 009  Papel e Cia   \n",
-       "4               0  Papelaria impressa para bijuteria 009  Papel e Cia   \n",
+       "   position  classification                                  title  \\\n",
+       "0        33               0    Sacola kraft media c/ papel rendado   \n",
+       "1        14               0    Sacola kraft media c/ papel rendado   \n",
+       "2        21               1    Sacola kraft media c/ papel rendado   \n",
+       "3        20               0  Papelaria impressa para bijuteria 009   \n",
+       "4        31               0  Papelaria impressa para bijuteria 009   \n",
        "\n",
-       "  subcategory                                               tags  \\\n",
-       "0   Embalagem  sacolas de papel,embalagens para presente,bols...   \n",
-       "1   Embalagem  sacolas de papel,embalagens para presente,bols...   \n",
-       "2   Embalagem  sacolas de papel,embalagens para presente,bols...   \n",
-       "3         Tag  tags,tag,bijuterias,brinco,pulseira,colar,etiq...   \n",
-       "4         Tag  tags,tag,bijuterias,brinco,pulseira,colar,etiq...   \n",
+       "      category subcategory                                               tags  \\\n",
+       "0  Papel e Cia   Embalagem  sacolas de papel,embalagens para presente,bols...   \n",
+       "1  Papel e Cia   Embalagem  sacolas de papel,embalagens para presente,bols...   \n",
+       "2  Papel e Cia   Embalagem  sacolas de papel,embalagens para presente,bols...   \n",
+       "3  Papel e Cia         Tag  tags,tag,bijuterias,brinco,pulseira,colar,etiq...   \n",
+       "4  Papel e Cia         Tag  tags,tag,bijuterias,brinco,pulseira,colar,etiq...   \n",
        "\n",
        "                       collection_names        creation_date  price  \\\n",
        "0  sacolas papel coloridas niver anna's  2008-11-05 22:57:17   3.39   \n",
@@ -259,7 +274,7 @@
        "4        127.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
