--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "74472035",
+   "id": "4238a5d7",
    "metadata": {},
    "outputs": [
     {
@@ -53,18 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "59c05c19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['price'] = np.round(df['price'],2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "2c31a8e2",
+   "execution_count": 12,
+   "id": "ea87f70a",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +84,7 @@
        "      <th>query</th>\n",
        "      <th>search_page</th>\n",
        "      <th>position</th>\n",
-       "      <th>classification</th>\n",
+       "      <th>product_relevance_classification</th>\n",
        "      <th>title</th>\n",
        "      <th>category</th>\n",
        "      <th>subcategory</th>\n",
@@ -226,61 +216,315 @@
        "      <td>NaN</td>\n",
        "      <td>127.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>509910</th>\n",
+       "      <td>509910</td>\n",
+       "      <td>5118671</td>\n",
+       "      <td>799465</td>\n",
+       "      <td>lembrancinha dia dos pais em goiania</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Copo Long Drink Dia dos Pais</td>\n",
+       "      <td>Lembrancinhas</td>\n",
+       "      <td>Personalizadas</td>\n",
+       "      <td>copo long drink,copo para formatura,copos de a...</td>\n",
+       "      <td>copo long drink dia pais</td>\n",
+       "      <td>2019-07-31 17:14:05</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>57</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>32.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>509911</th>\n",
+       "      <td>509911</td>\n",
+       "      <td>10373066</td>\n",
+       "      <td>3222466</td>\n",
+       "      <td>mesa infantil com 2 cadeiras</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Mesinha Infantil com 2 Cadeiras e Tampo com 55...</td>\n",
+       "      <td>Decoração</td>\n",
+       "      <td>Móveis</td>\n",
+       "      <td>mesa infantil,mesa,mesa de mdf,mesa para crian...</td>\n",
+       "      <td>mesas banquetas cadeiras infantis</td>\n",
+       "      <td>2019-08-01 16:56:22</td>\n",
+       "      <td>359.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9500.0</td>\n",
+       "      <td>136146.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>509912</th>\n",
+       "      <td>509912</td>\n",
+       "      <td>1473221</td>\n",
+       "      <td>1039041</td>\n",
+       "      <td>vela 40 anos</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Vela personalizada 40 anos em biscuit</td>\n",
+       "      <td>Aniversário e Festas</td>\n",
+       "      <td>Topo de Bolo</td>\n",
+       "      <td>vela,vela personalizada,vela de biscuit,vela d...</td>\n",
+       "      <td>velas topo bolo</td>\n",
+       "      <td>2019-08-03 02:02:02</td>\n",
+       "      <td>70.69</td>\n",
+       "      <td>1</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>896.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>509913</th>\n",
+       "      <td>509913</td>\n",
+       "      <td>10389379</td>\n",
+       "      <td>510188</td>\n",
+       "      <td>pai ciclista</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Kit Tal Pai Tal Filho Ciclista</td>\n",
+       "      <td>Roupas</td>\n",
+       "      <td>Camiseta</td>\n",
+       "      <td>bebê,papai,mamãe,mãe,pai,passear,personalizado...</td>\n",
+       "      <td>pais</td>\n",
+       "      <td>2019-08-03 15:34:48</td>\n",
+       "      <td>65.25</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>509914</th>\n",
+       "      <td>509914</td>\n",
+       "      <td>5674379</td>\n",
+       "      <td>1342359</td>\n",
+       "      <td>croche feliz natal letra frech</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Placa Poster 30x40cm Happy Easter (Feliz Páscoa)</td>\n",
+       "      <td>Decoração</td>\n",
+       "      <td>Poster</td>\n",
+       "      <td>placa,placa divertida,plaquinha,mdf,placa deco...</td>\n",
+       "      <td>criancas pascoa placas 30x40cm frases palavras...</td>\n",
+       "      <td>2019-08-04 00:06:33</td>\n",
+       "      <td>28.90</td>\n",
+       "      <td>7</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>1234.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>509915 rows × 20 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  product_id  seller_id                  query  search_page  \\\n",
-       "0           0    14229551    5243703  embalagem papel kraft            3   \n",
-       "1           1    14229551    5243703          papel rendado            2   \n",
-       "2           2    14229551    5243703  sacola de papel kraft            1   \n",
-       "3           3     4564841    9070334     tag para bijuteria            1   \n",
-       "4           4     4564841    9070334             bijuterias            1   \n",
+       "        Unnamed: 0  product_id  seller_id  \\\n",
+       "0                0    14229551    5243703   \n",
+       "1                1    14229551    5243703   \n",
+       "2                2    14229551    5243703   \n",
+       "3                3     4564841    9070334   \n",
+       "4                4     4564841    9070334   \n",
+       "...            ...         ...        ...   \n",
+       "509910      509910     5118671     799465   \n",
+       "509911      509911    10373066    3222466   \n",
+       "509912      509912     1473221    1039041   \n",
+       "509913      509913    10389379     510188   \n",
+       "509914      509914     5674379    1342359   \n",
        "\n",
-       "   position  classification                                  title  \\\n",
-       "0        33               0    Sacola kraft media c/ papel rendado   \n",
-       "1        14               0    Sacola kraft media c/ papel rendado   \n",
-       "2        21               1    Sacola kraft media c/ papel rendado   \n",
-       "3        20               0  Papelaria impressa para bijuteria 009   \n",
-       "4        31               0  Papelaria impressa para bijuteria 009   \n",
+       "                                       query  search_page  position  \\\n",
+       "0                      embalagem papel kraft            3        33   \n",
+       "1                              papel rendado            2        14   \n",
+       "2                      sacola de papel kraft            1        21   \n",
+       "3                         tag para bijuteria            1        20   \n",
+       "4                                 bijuterias            1        31   \n",
+       "...                                      ...          ...       ...   \n",
+       "509910  lembrancinha dia dos pais em goiania            1        21   \n",
+       "509911          mesa infantil com 2 cadeiras            1         1   \n",
+       "509912                          vela 40 anos            1        37   \n",
+       "509913                          pai ciclista            1        13   \n",
+       "509914        croche feliz natal letra frech            1        13   \n",
        "\n",
-       "      category subcategory                                               tags  \\\n",
-       "0  Papel e Cia   Embalagem  sacolas de papel,embalagens para presente,bols...   \n",
-       "1  Papel e Cia   Embalagem  sacolas de papel,embalagens para presente,bols...   \n",
-       "2  Papel e Cia   Embalagem  sacolas de papel,embalagens para presente,bols...   \n",
-       "3  Papel e Cia         Tag  tags,tag,bijuterias,brinco,pulseira,colar,etiq...   \n",
-       "4  Papel e Cia         Tag  tags,tag,bijuterias,brinco,pulseira,colar,etiq...   \n",
+       "        product_relevance_classification  \\\n",
+       "0                                      0   \n",
+       "1                                      0   \n",
+       "2                                      1   \n",
+       "3                                      0   \n",
+       "4                                      0   \n",
+       "...                                  ...   \n",
+       "509910                                 1   \n",
+       "509911                                 0   \n",
+       "509912                                 0   \n",
+       "509913                                 1   \n",
+       "509914                                 0   \n",
        "\n",
-       "                       collection_names        creation_date  price  \\\n",
-       "0  sacolas papel coloridas niver anna's  2008-11-05 22:57:17   3.39   \n",
-       "1  sacolas papel coloridas niver anna's  2008-11-05 22:57:17  12.04   \n",
-       "2  sacolas papel coloridas niver anna's  2008-11-05 22:57:17  12.26   \n",
-       "3                        kit bijuterias  2009-10-27 03:35:16  89.40   \n",
-       "4                        kit bijuterias  2009-10-27 03:35:16  89.66   \n",
+       "                                                    title  \\\n",
+       "0                     Sacola kraft media c/ papel rendado   \n",
+       "1                     Sacola kraft media c/ papel rendado   \n",
+       "2                     Sacola kraft media c/ papel rendado   \n",
+       "3                   Papelaria impressa para bijuteria 009   \n",
+       "4                   Papelaria impressa para bijuteria 009   \n",
+       "...                                                   ...   \n",
+       "509910                       Copo Long Drink Dia dos Pais   \n",
+       "509911  Mesinha Infantil com 2 Cadeiras e Tampo com 55...   \n",
+       "509912              Vela personalizada 40 anos em biscuit   \n",
+       "509913                     Kit Tal Pai Tal Filho Ciclista   \n",
+       "509914   Placa Poster 30x40cm Happy Easter (Feliz Páscoa)   \n",
        "\n",
-       "   minimum_quantity  weight  volume  express_delivery  order_counts  \\\n",
-       "0                 4     6.0     NaN                 0           8.0   \n",
-       "1                 0     6.0     NaN                 0           9.0   \n",
-       "2                 4     6.0     NaN                 0           7.0   \n",
-       "3                 4     6.0     NaN                 1           NaN   \n",
-       "4                 1     8.0     NaN                 1           NaN   \n",
+       "                    category     subcategory  \\\n",
+       "0                Papel e Cia       Embalagem   \n",
+       "1                Papel e Cia       Embalagem   \n",
+       "2                Papel e Cia       Embalagem   \n",
+       "3                Papel e Cia             Tag   \n",
+       "4                Papel e Cia             Tag   \n",
+       "...                      ...             ...   \n",
+       "509910         Lembrancinhas  Personalizadas   \n",
+       "509911             Decoração          Móveis   \n",
+       "509912  Aniversário e Festas    Topo de Bolo   \n",
+       "509913                Roupas        Camiseta   \n",
+       "509914             Decoração          Poster   \n",
        "\n",
-       "   view_counts  \n",
-       "0        131.0  \n",
-       "1        133.0  \n",
-       "2        129.0  \n",
-       "3        111.0  \n",
-       "4        127.0  "
+       "                                                     tags  \\\n",
+       "0       sacolas de papel,embalagens para presente,bols...   \n",
+       "1       sacolas de papel,embalagens para presente,bols...   \n",
+       "2       sacolas de papel,embalagens para presente,bols...   \n",
+       "3       tags,tag,bijuterias,brinco,pulseira,colar,etiq...   \n",
+       "4       tags,tag,bijuterias,brinco,pulseira,colar,etiq...   \n",
+       "...                                                   ...   \n",
+       "509910  copo long drink,copo para formatura,copos de a...   \n",
+       "509911  mesa infantil,mesa,mesa de mdf,mesa para crian...   \n",
+       "509912  vela,vela personalizada,vela de biscuit,vela d...   \n",
+       "509913  bebê,papai,mamãe,mãe,pai,passear,personalizado...   \n",
+       "509914  placa,placa divertida,plaquinha,mdf,placa deco...   \n",
+       "\n",
+       "                                         collection_names  \\\n",
+       "0                    sacolas papel coloridas niver anna's   \n",
+       "1                    sacolas papel coloridas niver anna's   \n",
+       "2                    sacolas papel coloridas niver anna's   \n",
+       "3                                          kit bijuterias   \n",
+       "4                                          kit bijuterias   \n",
+       "...                                                   ...   \n",
+       "509910                           copo long drink dia pais   \n",
+       "509911                  mesas banquetas cadeiras infantis   \n",
+       "509912                                    velas topo bolo   \n",
+       "509913                                               pais   \n",
+       "509914  criancas pascoa placas 30x40cm frases palavras...   \n",
+       "\n",
+       "              creation_date   price  minimum_quantity  weight    volume  \\\n",
+       "0       2008-11-05 22:57:17    3.39                 4     6.0       NaN   \n",
+       "1       2008-11-05 22:57:17   12.04                 0     6.0       NaN   \n",
+       "2       2008-11-05 22:57:17   12.26                 4     6.0       NaN   \n",
+       "3       2009-10-27 03:35:16   89.40                 4     6.0       NaN   \n",
+       "4       2009-10-27 03:35:16   89.66                 1     8.0       NaN   \n",
+       "...                     ...     ...               ...     ...       ...   \n",
+       "509910  2019-07-31 17:14:05    1.99                57     7.0       NaN   \n",
+       "509911  2019-08-01 16:56:22  359.00                 1  9500.0  136146.0   \n",
+       "509912  2019-08-03 02:02:02   70.69                 1   127.0     896.0   \n",
+       "509913  2019-08-03 15:34:48   65.25                 8     8.0       NaN   \n",
+       "509914  2019-08-04 00:06:33   28.90                 7   300.0    1234.0   \n",
+       "\n",
+       "        express_delivery  order_counts  view_counts  \n",
+       "0                      0           8.0        131.0  \n",
+       "1                      0           9.0        133.0  \n",
+       "2                      0           7.0        129.0  \n",
+       "3                      1           NaN        111.0  \n",
+       "4                      1           NaN        127.0  \n",
+       "...                  ...           ...          ...  \n",
+       "509910                 1           NaN         32.0  \n",
+       "509911                 0          17.0          7.0  \n",
+       "509912                 1           NaN          NaN  \n",
+       "509913                 1           NaN          6.0  \n",
+       "509914                 1           NaN         22.0  \n",
+       "\n",
+       "[509915 rows x 20 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df['price'] = np.round(df['price'],2)\n",
+    "df.rename(columns={\"classification\": \"product_relevance_classification\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05353b73",
+   "metadata": {},
+   "source": [
+    "- `product_id`: product number identification\n",
+    "- `seller_id`: seller number identification\n",
+    "- `query`: the text inserted by users\n",
+    "- `search_page`: the page number the product appeared (min 1 and max 5)\n",
+    "- `position`: the position the product appeared in the search page (min 0 and max 38)\n",
+    "- `product_relevance_classification`: a measure of relevance. 1 means the product is relevant for the given query and 0 it is not\n",
+    "- `title`: product title\n",
+    "- `category`: product category\n",
+    "- `subcategory`: product subcategory\n",
+    "- `tags`: product tags inserted by the seller\n",
+    "- `collection_names`: a list of collection names (created by the seller) for which the product is in\n",
+    "- `creation_date`: the date of product registration in Elo7 platform\n",
+    "- `price`: the product price (R$)\n",
+    "- `minimum_quantity`: the minimum quantity the seller sells the product\n",
+    "- `weight`: the weight (grams) of a product unit\n",
+    "- `volume`: the volume (cubic meters) of a product unit\n",
+    "- `express_delivery`: indicates if the product has already been made (1) or not (0)\n",
+    "- `order_counts`: the number of times the product was purchased in the last three months\n",
+    "- `view_counts`: the number of times the product was clicked in the last three months"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "30a5698b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_features = [\"search_page\", \"position\", \"price\", \"minimum_quantity\", \"weight\", \"order_counts\", \"view_counts\"]\n",
+    "categoric_features = ['category']"
    ]
   }
  ],
