--- a/src/machine-learning/02-classificacao.ipynb
+++ b/src/machine-learning/02-classificacao.ipynb
@@ -251,7 +251,8 @@
      "output_type": "stream",
      "text": [
       "Treinaremos com 74 elementos e testaremos com 25 elementos\n",
-      "A acurácia foi 96.00%\n"
+      "A acurácia foi 96.00%\n",
+      "A proporção foi de 47.00(treino) / 19.00(teste) = 2.47\n"
      ]
     }
    ],
@@ -263,7 +264,10 @@
     "\n",
     "SEED = 20\n",
     "\n",
-    "treino_x, teste_x, treino_y, teste_y = train_test_split(x, y, random_state = SEED, test_size=0.25)\n",
+    "treino_x, teste_x, treino_y, teste_y = train_test_split(x, y, \n",
+    "                                                        random_state = SEED,\n",
+    "                                                        test_size=0.25,\n",
+    "                                                       )\n",
     "\n",
     "print(\"Treinaremos com %d elementos e testaremos com %d elementos\" % (len(treino_x), len(teste_x)))\n",
     "\n",
@@ -273,7 +277,21 @@
     "previsoes = modelo.predict(teste_x)\n",
     "\n",
     "taxa_de_acerto = accuracy_score(teste_y, previsoes) * 100\n",
-    "print(\"A acurácia foi %.2f%%\" % taxa_de_acerto)"
+    "print(\"A acurácia foi %.2f%%\" % taxa_de_acerto)\n",
+    "\n",
+    "print(\"A proporção foi de %.2f(treino) / %.2f(teste) = %.2f\" %\n",
+    "    (treino_y.value_counts()[0],\n",
+    "     teste_y.value_counts()[0],\n",
+    "     treino_y.value_counts()[0]/teste_y.value_counts()[0])\n",
+    "     )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cd6ba64",
+   "metadata": {},
+   "source": [
+    "# Treino com os valores y em equilíbrio"
    ]
   },
   {
@@ -286,24 +304,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "labels de treino\n",
-      "0    47\n",
-      "1    27\n",
-      "Name: comprou, dtype: int64\n",
-      "--------------\n",
-      "labels de teste\n",
-      "0    19\n",
-      "1     6\n",
-      "Name: comprou, dtype: int64\n"
+      "Treinaremos com 74 elementos e testaremos com 25 elementos\n",
+      "A acurácia foi 96.00%\n",
+      "A proporção foi de 49.00(treino) / 17.00(teste) = 2.88\n"
      ]
     }
    ],
    "source": [
-    "print(\"labels de treino\")\n",
-    "print(f\"{treino_y.value_counts()}\")\n",
-    "print(\"--------------\")\n",
-    "print(\"labels de teste\")\n",
-    "print(f\"{teste_y.value_counts()}\")"
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "SEED = 20\n",
+    "\n",
+    "treino_x, teste_x, treino_y, teste_y = train_test_split(x, y, \n",
+    "                                                        random_state = SEED,\n",
+    "                                                        stratify = y,\n",
+    "                                                        test_size=0.25,\n",
+    "                                                       )\n",
+    "\n",
+    "print(\"Treinaremos com %d elementos e testaremos com %d elementos\" % (len(treino_x), len(teste_x)))\n",
+    "\n",
+    "\n",
+    "modelo = LinearSVC()\n",
+    "modelo.fit(treino_x, treino_y)\n",
+    "previsoes = modelo.predict(teste_x)\n",
+    "\n",
+    "taxa_de_acerto = accuracy_score(teste_y, previsoes) * 100\n",
+    "print(\"A acurácia foi %.2f%%\" % taxa_de_acerto)\n",
+    "\n",
+    "print(\"A proporção foi de %.2f(treino) / %.2f(teste) = %.2f\" %\n",
+    "    (treino_y.value_counts()[0],\n",
+    "     teste_y.value_counts()[0],\n",
+    "     treino_y.value_counts()[0]/teste_y.value_counts()[0])\n",
+    "     )"
    ]
   }
  ],
@@ -323,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
