--- a/src/machine-learning-introduction/C1_W1/C1_W1_Lab01_Python_Jupyter_Soln.ipynb
+++ b/src/machine-learning-introduction/C1_W1/C1_W1_Lab01_Python_Jupyter_Soln.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "241d69f6",
    "metadata": {},
    "source": [
     "# Optional Lab:  Brief Introduction to Python and Jupyter Notebooks\n",
@@ -15,7 +14,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecdfd3ec",
    "metadata": {},
    "source": [
     "## Goals\n",
@@ -28,7 +26,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d768aba3",
    "metadata": {},
    "source": [
     "The easiest way to become familiar with Jupyter notebooks is to take the tour available above in the Help menu:"
@@ -36,7 +33,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebf3ab4e",
    "metadata": {},
    "source": [
     "<figure>\n",
@@ -46,7 +42,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2ed47fa",
    "metadata": {},
    "source": [
     "Jupyter notebooks have two types of cells that are used in this course. Cells such as this which contain documentation called `Markdown Cells`. The name is derived from the simple formatting language used in the cells. You will not be required to produce markdown cells. Its useful to understand the `cell pulldown` shown in graphic below. Occasionally, a cell will end up in the wrong mode and you may need to restore it to the right state:"
@@ -54,7 +49,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "748e67bd",
    "metadata": {},
    "source": [
     "<figure>\n",
@@ -64,7 +58,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd20dcf9",
    "metadata": {},
    "source": [
     "The other type of cell is the `code cell` where you will write your code:"
@@ -73,7 +66,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "faab390d",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +83,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1fbdc2d",
    "metadata": {},
    "source": [
     "## Python\n",
@@ -108,7 +99,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29d30e56",
    "metadata": {},
    "source": [
     "### Print statement\n",
@@ -120,7 +110,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8b1004ba",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +128,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cc4bbc9",
    "metadata": {},
    "source": [
     "# Congratulations!\n",
@@ -149,7 +137,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -163,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
