--- a/src/machine-learning-introduction/C1_W1/C1_W1_Lab04_Cost_function_Soln.ipynb
+++ b/src/machine-learning-introduction/C1_W1/C1_W1_Lab04_Cost_function_Soln.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "26b0221e",
    "metadata": {},
    "source": [
     "# Optional  Lab: Cost Function \n",
@@ -13,6 +14,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "de2ded12",
    "metadata": {},
    "source": [
     "## Goals\n",
@@ -22,6 +24,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e294e03",
    "metadata": {},
    "source": [
     "## Tools\n",
@@ -33,7 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "0e1f05df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +50,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "692186e2",
    "metadata": {},
    "source": [
     "## Problem Statement\n",
@@ -63,6 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f52a1129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +78,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eb07fb9e",
    "metadata": {},
    "source": [
     "## Computing Cost\n",
@@ -91,6 +98,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5f795995",
    "metadata": {},
    "source": [
     "The code below calculates cost by looping over each example. In each loop:\n",
@@ -102,6 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1dc14b6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,6 +142,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7de978f0",
    "metadata": {},
    "source": [
     "## Cost Function Intuition"
@@ -140,6 +150,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c69b01fb",
    "metadata": {},
    "source": [
     "<img align=\"left\" src=\"./images/C1_W1_Lab02_GoalOfRegression.PNG\"    style=\" width:380px; padding: 10px;  \" /> Your goal is to find a model $f_{w,b}(x) = wx + b$, with parameters $w,b$,  which will accurately predict house values given an input $x$. The cost is a measure of how accurate the model is on the training data.\n",
@@ -155,6 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cc70a1f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,6 +175,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "89b12bfd",
    "metadata": {},
    "source": [
     "The plot contains a few points that are worth mentioning.\n",
@@ -173,6 +186,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fcc8b588",
    "metadata": {},
    "source": [
     "## Cost Function Visualization- 3D\n",
@@ -183,6 +197,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "77689411",
    "metadata": {},
    "source": [
     "### Larger Data Set\n",
@@ -192,6 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c1a20065",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,6 +217,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "07cebdf6",
    "metadata": {},
    "source": [
     "In the contour plot, click on a point to select `w` and `b` to achieve the lowest cost. Use the contours to guide your selections. Note, it can take a few seconds to update the graph. "
@@ -209,6 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0a17f84a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,6 +237,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3d7a88d0",
    "metadata": {},
    "source": [
     "Above, note the dashed lines in the left plot. These represent the portion of the cost contributed by each example in your training set. In this case, values of approximately $w=209$ and $b=2.4$ provide low cost. Note that, because our training examples are not on a line, the minimum cost is not zero."
@@ -226,6 +245,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fd66ba1b",
    "metadata": {},
    "source": [
     "### Convex Cost surface\n",
@@ -235,6 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5cefbaf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,6 +264,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f55edbc0",
    "metadata": {},
    "source": [
     "# Congratulations!\n",
@@ -254,6 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3e660bab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -261,7 +284,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -275,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   },
   "toc-autonumbering": false
  },
