--- a/src/machine-learning-introduction/C1/W1/C1_W1_Lab05_Gradient_Descent_Soln.ipynb
+++ b/src/machine-learning-introduction/C1/W1/C1_W1_Lab05_Gradient_Descent_Soln.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9b708c15",
    "metadata": {},
    "source": [
     "# Optional Lab: Gradient Descent for Linear Regression\n",
@@ -13,6 +14,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "13025f1d",
    "metadata": {},
    "source": [
     "## Goals\n",
@@ -22,6 +24,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "23361cfc",
    "metadata": {},
    "source": [
     "## Tools\n",
@@ -34,6 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "59cf323f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +50,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0ba8aa05",
    "metadata": {},
    "source": [
     "<a name=\"toc_40291_2\"></a>\n",
@@ -62,6 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4f247efd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +78,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a3bc0438",
    "metadata": {},
    "source": [
     "<a name=\"toc_40291_2.0.1\"></a>\n",
@@ -82,6 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eeed80e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +109,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "75a0075e",
    "metadata": {},
    "source": [
     "<a name=\"toc_40291_2.1\"></a>\n",
@@ -113,6 +122,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fe44113e",
    "metadata": {},
    "source": [
     "\n",
@@ -136,6 +146,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "36514ba1",
    "metadata": {},
    "source": [
     "<a name=\"toc_40291_2.2\"></a>\n",
@@ -152,6 +163,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e2c579f",
    "metadata": {},
    "source": [
     "<a name=\"toc_40291_2.3\"></a>\n",
@@ -163,6 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "94aa7062",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,6 +210,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2182cf48",
    "metadata": {},
    "source": [
     "<br/>"
@@ -204,6 +218,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "33b0620c",
    "metadata": {},
    "source": [
     "<img align=\"left\" src=\"./images/C1_W1_Lab03_lecture_slopes.PNG\"   style=\"width:340px;\" > The lectures described how gradient descent utilizes the partial derivative of the cost with respect to a parameter at a point to update that parameter.   \n",
@@ -213,6 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e2441426",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,6 +238,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6cd059b9",
    "metadata": {},
    "source": [
     "Above, the left plot shows $\\frac{\\partial J(w,b)}{\\partial w}$ or the slope of the cost curve relative to $w$ at three points. On the right side of the plot, the derivative is positive, while on the left it is negative. Due to the 'bowl shape', the derivatives will always lead gradient descent toward the bottom where the gradient is zero.\n",
@@ -232,6 +249,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6e420e56",
    "metadata": {},
    "source": [
     "<a name=\"toc_40291_2.5\"></a>\n",
@@ -242,6 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "65ff0fd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,6 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0cb93c3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,6 +334,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bf2311d6",
    "metadata": {},
    "source": [
     "<img align=\"left\" src=\"./images/C1_W1_Lab03_lecture_learningrate.PNG\"  style=\"width:340px; padding: 15px; \" > \n",
@@ -326,6 +347,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "21110713",
    "metadata": {},
    "source": [
     "### Cost versus iterations of gradient descent \n",
@@ -335,6 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "23c2ff9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,6 +373,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0f5a3c1d",
    "metadata": {},
    "source": [
     "### Predictions\n",
@@ -359,6 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a487656f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,6 +394,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "81811967",
    "metadata": {},
    "source": [
     "<a name=\"toc_40291_2.6\"></a>\n",
@@ -379,6 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1de96919",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,6 +415,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7c975b0f",
    "metadata": {},
    "source": [
     "Above, the contour plot shows the $cost(w,b)$ over a range of $w$ and $b$. Cost levels are represented by the rings. Overlayed, using red arrows, is the path of gradient descent. Here are some things to note:\n",
@@ -397,6 +425,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "126d2856",
    "metadata": {},
    "source": [
     "**Zooming in**, we can see that final steps of gradient descent. Note the distance between steps shrinks as the gradient approaches zero."
@@ -405,6 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d73ed4ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,6 +445,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1ca35521",
    "metadata": {},
    "source": [
     "<a name=\"toc_40291_2.7.1\"></a>\n",
@@ -431,6 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ccc5acb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,6 +479,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4ad63332",
    "metadata": {},
    "source": [
     "Above, $w$ and $b$ are bouncing back and forth between positive and negative with the absolute value increasing with each iteration. Further, each iteration $\\frac{\\partial J(w,b)}{\\partial w}$ changes sign and cost is increasing rather than decreasing. This is a clear sign that the *learning rate is too large* and the solution is diverging. \n",
@@ -456,6 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "93e6d92b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,6 +499,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "42c7c60e",
    "metadata": {},
    "source": [
     "Above, the left graph shows $w$'s progression over the first few steps of gradient descent. $w$ oscillates from positive to negative and cost grows rapidly. Gradient Descent is operating on both $w$ and $b$ simultaneously, so one needs the 3-D plot on the right for the complete picture."
@@ -472,6 +507,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ec2bec90",
    "metadata": {},
    "source": [
     "\n",
@@ -488,6 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "52881de6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -498,7 +535,7 @@
    "rndtag": "40291"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -512,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   },
   "toc-autonumbering": false
  },
